--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,6 +4,7 @@ platform :ios, '9.0'
 
 target 'LWWebLoader_Example' do
   pod 'LWWebLoader', :path => '../'
+  pod 'LWWebSocket', :path => '../../LWWebSocket/'
 
   # pod 'WebViewJavascriptBridge', '~> 6.0.3'
 
