--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,9 @@ platform :ios, '9.0'
 
 target 'LWWebLoader_Example' do
   pod 'LWWebLoader', :path => '../'
-  pod 'LWWebSocket', :path => '../../LWWebSocket/'
+  
+  pod 'LWWebSocket',:source => 'https://gitee.com/lw_ios_project/mylibrepo.git'
+  # pod 'LWWebSocket', :path => '../../LWWebSocket/'
 
   # pod 'WebViewJavascriptBridge', '~> 6.0.3'
 
